--- a/src/html/login.html
+++ b/src/html/login.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Acesse o NotifIC, sistema do Instituto de 
     Computação da UFAL para gerenciar e centralizar notificações e oportunidades." />
   </head>
-  <body>
+  <body data-page="login">
     <div class="auth-container">
       <div class="logo">
   <img src="{{ url_for('static', filename='img/notific.svg') }}" alt="Logo Notific" class="logo-img" />
