--- a/src/html/recuperacaoSenha.html
+++ b/src/html/recuperacaoSenha.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/auth.css" />
-    <link rel="icon" type="image/svg+xml" href="../img/logo-notific.svg" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}" />
+  <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='img/logo-notific.svg') }}" />
     <meta name="description" content="Recupere o acesso ao NotifIC, o sistema do
      Instituto de Computação da UFAL para centralizar notificações e oportunidades." />
     <title>Recuperação de Senha- Notific</title>
   </head>
-  <body>
+  <body data-page="recovery">
     <div class="auth-container">
       <div class="logo">
-        <img src="../img/notific.svg" alt="Logo Notific" class="logo-img" />
+  <img src="{{ url_for('static', filename='img/notific.svg') }}" alt="Logo Notific" class="logo-img" />
         <p>Seu sistema de notificações eficiente</p>
       </div>
       
@@ -31,7 +31,7 @@
           />
 
           <div class="links">
-            <a href="/login-page">Login</a>
+            <a href="/login">Login</a>
             <a href="/">Tela inicial</a>
           </div>
           <button type="submit">Recuperar Senha</button>
@@ -39,6 +39,6 @@
       </div>
     </div>
 
-    <script src="../javascript/auth.js"></script>
+  <script src="{{ url_for('static', filename='javascript/auth.js') }}"></script>
   </body>
 </html>
