home html renderizado

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>notifIC</title>
-    <link rel="stylesheet" href="../css/home.css" />
-    <link rel="icon" type="image/svg+xml" href="../img/logo-notific.svg" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}" />
+  <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='img/logo-notific.svg') }}" />
   </head>
   <body>
     <header>
       <div class="header-logo">
-        <a href="home.html">
-          <img src="../img/notific.svg" alt="Logo NotifIC" id="logo-img" />
+        <a href="/home">
+          <img src="{{ url_for('static', filename='img/notific.svg') }}" alt="Logo NotifIC" id="logo-img" />
         </a>
       </div>
       <div class="header-search-wrapper">
@@ -164,6 +164,6 @@
       </div>
     </footer>
 
-    <script src="../javascript/home.js" defer></script>
+  <script src="{{ url_for('static', filename='javascript/home.js') }}" defer></script>
   </body>
 </html>
