--- a/src/html/login.html
+++ b/src/html/login.html
@@ -40,8 +40,8 @@
           />
 
           <div class="links">
-            <a href="/registrar-page">Criar Conta</a>
-            <a href="/recuperacao-senha-page">Esqueci minha senha</a>
+            <a href="/registrar">Criar Conta</a>
+            <a href="/recuperacao">Esqueci minha senha</a>
           </div>
           <button type="submit">Entrar</button>
         </form>
