--- a/src/html/registrar.html
+++ b/src/html/registrar.html
@@ -59,7 +59,7 @@
 
           <div class="links">
             <a href="/login">Já tenho conta</a>
-            <a href="/recuperacao-senha-page">Esqueci minha senha</a>
+            <a href="/recuperacao">Esqueci minha senha</a>
           </div>
           <button type="submit">Criar Conta</button>
         </form>
