--- a/src/html/home.html
+++ b/src/html/home.html
@@ -103,9 +103,9 @@
         >
       </header>
       <nav>
-        <a href="paginaUsuario.html">Perfil</a>
-        <a href="page_feed.html">Cadastrar Notícia</a>
-        <a href="#">Sair</a>
+  <a href="paginaUsuario.html">Perfil</a>
+  <a href="page_feed.html">Cadastrar Notícia</a>
+  <a href="#" id="logoutLink">Sair</a>
       </nav>
       <footer>© 2025 ./notifIC</footer>
     </aside>
