--- a/src/html/news.html
+++ b/src/html/news.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>./NotifIC - Notícia</title>
-    <link rel="stylesheet" href="../css/news.css" />
-    <link rel="icon" type="image/svg+xml" href="../img/logo-notific.svg" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/news.css') }}" />
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='img/logo-notific.svg') }}" />
   </head>
   <body>
 
     <!-- Navbar -->
     <nav class="navbar">
-      <a href="home.html">
-        <img src="../img/notific.svg" alt="logo do notific" class="logo-ic">
+      <a href="{{ url_for('static', filename='html/home.html') }}">
+        <img src="{{ url_for('static', filename='img/notific.svg') }}" alt="logo do notific" class="logo-ic">
       </a>
     </nav>
 
@@ -22,6 +22,6 @@
       </div>
     </main>
 
-    <script src="../js/news.js"></script>
+    <script src="{{ url_for('static', filename='javascript/news.js') }}"></script>
   </body>
 </html>
