--- a/src/html/news.html
+++ b/src/html/news.html
@@ -11,7 +11,7 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-      <a href="{{ url_for('static', filename='html/home.html') }}">
+      <a href="{{ url_for('home_routes.home') }}">
         <img src="{{ url_for('static', filename='img/notific.svg') }}" alt="logo do notific" class="logo-ic">
       </a>
     </nav>
@@ -22,6 +22,10 @@
       </div>
     </main>
 
+    <script>
+      // Server-provided user object for client-side initialization
+      window.APP_USER = {{ usuario|tojson }};
+    </script>
     <script src="{{ url_for('static', filename='javascript/news.js') }}"></script>
   </body>
 </html>
