Nome do Usuario no Header quando logado

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -57,9 +57,13 @@
         </div>
       </div>
 
-      <div id="profileButton">
-        <span class="profile-icon">👤</span>
-        <img src="https://i.pravatar.cc/40" alt="Perfil" />
+      <!-- Agrupa nome do usuário e ícone de perfil para posicionamento correto -->
+      <div class="header-user-area">
+        <div id="headerUsername" aria-live="polite"></div>
+        <div id="profileButton">
+          <span class="profile-icon">👤</span>
+          <img src="https://i.pravatar.cc/40" alt="Perfil" />
+        </div>
       </div>
     </header>
     <section class="hero-carousel">
