--- a/src/html/paginaUsuario.html
+++ b/src/html/paginaUsuario.html
@@ -136,18 +136,19 @@
         const logoutEls = document.querySelectorAll('.logout-link');
         logoutEls.forEach(function (el) {
           el.addEventListener('click', async function (e) {
-            e.preventDefault();
-            try {
-              await fetch("{{ url_for('auth_routes.logout') }}", {
-                method: 'POST',
-                credentials: 'same-origin',
-                headers: { 'Content-Type': 'application/json' },
-              });
-            } catch (err) {
-              // ignore network errors
-            }
-            window.location = "{{ url_for('auth_routes.login_page') }}";
-          });
+              e.preventDefault();
+              try {
+                await fetch("{{ url_for('auth_routes.logout') }}", {
+                  method: 'POST',
+                  credentials: 'same-origin',
+                  headers: { 'Content-Type': 'application/json' },
+                });
+              } catch (err) {
+                // ignore network errors
+              }
+              // Redirect to home page after logout
+              window.location = "{{ url_for('home_routes.home') }}";
+            });
         });
       });
     </script>
