--- a/src/html/painel_administrador.html
+++ b/src/html/painel_administrador.html
@@ -3,7 +3,7 @@
   <!-- Header (mesmo do feed) -->
   <header>
     <div class="icone-ic">
-      <a href="{{ url_for('static', filename='html/home.html') }}">
+      <a href="{{ url_for('home_routes.home') }}">
         <img src="{{ url_for('static', filename='img/home_icon.png') }}" alt="Home" class="home-icon">
       </a>
       <div class="menu-title">notif<span class="logo-ic">IC</span></div>
