--- a/src/html/home.html
+++ b/src/html/home.html
@@ -147,16 +147,14 @@
         <h4>Contato</h4>
         <p>
           Instituto de Computação - UFAL<br />
-          (82) 3214-0000<br />
-          notific@ic.ufal.br
+          NotificUFAL@gmail.com
         </p>
       </div>
       <div>
         <h4>Links Rápidos</h4>
           <p>
           <a href="{{ url_for('news_routes.news_page') }}">Anuncie no site</a><br />
-          <a href="{{ url_for('static', filename='html/painel_administrador.html') }}">Contate-nos</a><br />
-          <a href="#">Reportar problema</a>
+          <a href="mailto:NotificUFAL@gmail.com">Contate-nos</a>
         </p>
       </div>
       <div>
@@ -166,7 +164,7 @@
           de Computação da UFAL.
         </p>
       </div>
-    </footer>
+    </footer>
 
   <script src="{{ url_for('static', filename='javascript/home.js') }}" defer></script>
   <script>
