Preferencias de notificações consertadas

--- a/src/html/paginaUsuario.html
+++ b/src/html/paginaUsuario.html
@@ -118,21 +118,21 @@
           <h2>Preferências de Notificações</h2>
           <div class="preferences-list">
             <div class="preference-item">
-              <span>Eventos</span>
+              <span>EVENTO</span>
               <label class="switch">
                 <input type="checkbox" checked />
                 <span class="slider round"></span>
               </label>
             </div>
             <div class="preference-item">
-              <span>Projetos</span>
+              <span>PROJETO</span>
               <label class="switch">
                 <input type="checkbox" checked />
                 <span class="slider round"></span>
               </label>
             </div>
             <div class="preference-item">
-              <span>Vagas</span>
+              <span>VAGA</span>
               <label class="switch">
                 <input type="checkbox" checked />
                 <span class="slider round"></span>
